# monomi

./: .gitignore  Cargo.toml  ISSUES.md  README.md  architecture.md  plan.md
crates/monomi-ast/: Cargo.toml
crates/monomi-ast/src/: analysis.rs  cache.rs  lib.rs
crates/monomi-ast/tests/: smoke.rs
crates/monomi-cargo/: Cargo.toml
crates/monomi-cargo/src/: lib.rs
crates/monomi-catalog/: Cargo.toml
crates/monomi-catalog/src/: error.rs  http_reader.rs  layout.rs  lib.rs  local_dir.rs  traits.rs
crates/monomi-cli/: Cargo.toml
crates/monomi-cli/src/: main.rs
crates/monomi-core/: Cargo.toml
crates/monomi-core/src/: artifact.rs  capability.rs  diff.rs  ecosystem.rs  entry.rs  error.rs  finding.rs  lib.rs  manifest.rs  rule.rs  verdict.rs
crates/monomi-feed/: Cargo.toml
crates/monomi-feed/src/: backfill.rs  changes.rs  cursor.rs  lib.rs  runner.rs  worker.rs
crates/monomi-llm/: Cargo.toml
crates/monomi-llm/src/: anthropic.rs  budget.rs  context.rs  lib.rs  noop.rs  openai_compat.rs  prompt.rs  system.txt
crates/monomi-npm/: Cargo.toml
crates/monomi-npm/src/: lib.rs
crates/monomi-nuget/: Cargo.toml
crates/monomi-nuget/src/: lib.rs
crates/monomi-pipeline/: Cargo.toml
crates/monomi-pipeline/src/: diff.rs  explain.rs  history.rs  lib.rs  verdict_diff.rs
crates/monomi-pypi/: Cargo.toml
crates/monomi-pypi/src/: lib.rs
crates/monomi-rules/: Cargo.toml
crates/monomi-rules/src/: ast_helpers.rs  bundled_deps.rs  cargo_build_rs.rs  cargo_include_payload.rs  cargo_proc_macro.rs  cargo_proc_macro_source.rs  chmod_executable.rs  cloud_metadata.rs  corpus.rs  crypto_miner.rs  dangerous_apis.rs  destructive_fs.rs  dns_exfil.rs  dynamic_require.rs  encoded_url.rs  env_exfil_flow.rs  env_harvest.rs  eval_atob.rs  eval_blob.rs  files_mismatch.rs  hidden_unicode.rs  install_http.rs  known_exfil.rs  lib.rs  lifecycle_present.rs  main_module_branch.rs  metadata_smuggling.rs  minified_no_source.rs  native_binary.rs  nuget_install_ps1.rs  nuget_tools_dll.rs  persistence_paths.rs  privesc_paths.rs  publish_time.rs  pypi_setup.rs  raw_github_fetch.rs  recency.rs  registry_write.rs  require_cache_mutation.rs  runner.rs  (+9 more)
crates/monomi-rules/tests/: cargo_rules.rs  corpus_replay.rs  incident_shapes.rs  nuget_rules.rs  pypi_rules.rs  rules.rs
docs/: deploy.md
fixtures/corpus/: manifest.json
scripts/: fetch_corpus.sh
