[package]
name = "monomi-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monomi-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
