[package]
name = "monomi-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monomi-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
