[package]
name = "monomi-npm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monomi-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
tracing.workspace = true
chrono.workspace = true
