[package]
name = "monomi-nuget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monomi-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
