[package]
name = "monomi-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monomi-core.workspace = true
monomi-ast.workspace = true
monomi-rules.workspace = true
monomi-llm.workspace = true
monomi-catalog.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
